# LLMEnergyEfficiency

./: .env.example  .gitignore  Notes.md  PLOTTING_GUIDE.md  README.md  mvp_benchmark.py  pyproject.toml  requirements.txt  test_gpqa_diamond.py
.cursor/rules/: energyeff-cursorrule.mdc
Notes/: Baselines.md  Notes.md  Performance Pareto for Reasoning Models Extended.docx  Progress.xlsx
archive/: nemotron_transformers.ipynb
config/: datasets.ini
configs/: bench.yaml  bench_deepspeed_test.yaml  bench_fixed_flops.yaml  bench_prompt_tester.yaml  bench_tester.yaml  bench_tester_duplicate.yaml  bench_tester_small.yaml  bigones.yaml  datasets.ini  higherthinkbudget.yaml  hypothesis_1_compute_allocation.yaml  hypothesis_4_multipass_methods.yaml  hypothesis_main.yaml  hypothesis_missing_runs_correct.yaml  models.ini  watts.yaml
configs/archive/: systemmessage.yaml  thinkingparam.yaml
interesting/: llama7b-questionmark
scripts/: fix_missing_nvcc.sh  huggingface_cli.sh  install_notes.sh  plot_example.sh  resources.sh  vllm_host.sh  who_gpu.sh
src/: gpu.py  mvp_benchmark.ipynb  mvp_benchmark.py  nemotron_transformers.ipynb  single_infer.py
src/calibration/: __init__.py  data.py  models.py  runners.py  utils.py
src/cli/: bench.py  bench_from_config.py  bench_from_config_batch.py  bench_single_config.py  bench_with_calibration.py  bench_with_calibration.py.backup  bench_with_calibration_clean.py  generate_plots.py  generate_plots_depr.py
src/cli/calibration/: __init__.py  run_calibration_deepspeed.py
src/config/: bench_config.py
src/core/: interfaces.py
src/core/engines/: __init__.py  base.py  deepspeed_local.py  openai_api.py  transformers_local.py  vllm_local.py  vllm_server.py
src/data/: adapters.py  normalize.py
src/logging/: wandb_logger.py
src/logs/: benchmark_logger.py  wandb_logger.py
src/metrics/: energy.py  flop_estimation.py  inequality.py
src/reasoning/: aggregators.py  controller.py  prompts.py
src/utils/: __init__.py  env_loader.py
tests/: test_adapters.py  test_calibration_backend.py  test_calibration_backend_integration.py  test_chat_message_formatting.py  test_config.py  test_energy.py  test_flop_calibration.py  test_flop_estimation.py  test_flops.py  test_generate_plots.py  test_inequality.py  test_reasoning.py  test_string_formatting.py  test_system_prompt.py  test_vllm_generation_modes.py  test_wandb_logger.py
wandb/: latest-run
wandb/run-20250911_120711-qfw7azz8/: run-qfw7azz8.wandb
wandb/run-20250911_120711-qfw7azz8/files/: config.yaml  wandb-metadata.json
wandb/run-20250911_121207-gzch7eau/: run-gzch7eau.wandb
wandb/run-20250911_121207-gzch7eau/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250911_131046-cg2hazgx/: run-cg2hazgx.wandb
wandb/run-20250911_131046-cg2hazgx/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250911_134840-piyqt8cu/: run-piyqt8cu.wandb
wandb/run-20250911_135622-c7f0uqd5/: run-c7f0uqd5.wandb
wandb/run-20250911_135704-8mgbwpbc/: run-8mgbwpbc.wandb
wandb/run-20250911_135824-qvwqypg5/: run-qvwqypg5.wandb
wandb/run-20250911_135925-uzwkz9v5/: run-uzwkz9v5.wandb
wandb/run-20250911_140042-gwm56p2d/: run-gwm56p2d.wandb
wandb/run-20250911_140329-0wl6qxcw/: run-0wl6qxcw.wandb
wandb/run-20250911_142043-17z60lrk/: run-17z60lrk.wandb
wandb/run-20250911_142214-fi15z9f0/: run-fi15z9f0.wandb
wandb/run-20250911_142613-hnrzp16x/: run-hnrzp16x.wandb
wandb/run-20250911_142813-xvyv7oyv/: run-xvyv7oyv.wandb
wandb/run-20250911_142929-6lmuavqd/: run-6lmuavqd.wandb
wandb/run-20250911_143111-3iuixwvl/: run-3iuixwvl.wandb
(+31 files in other folders)
