[project]
name = "energyefficiency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "mamba-ssm>=2.2.5",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    # torch, vllm will be installed via uv pip below, not pinned here
    "wandb>=0.21.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
